--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "eslint": "^4.4.1",
     "firebase": "^3.7.0",
     "google-map-react": "^0.24.0",
     "marked": "^0.3.6",
@@ -17,6 +18,7 @@
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
     "react-async-script-loader": "^0.2.2",
+    "react-datepicker": "^0.53.0",
     "react-dom": "^15.4.2",
     "react-google-maps": "^6.0.1",
     "react-helmet": "^4.0.0",
