--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "eslint": "^4.4.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.2.1",
     "firebase": "^3.7.0",
     "google-map-react": "^0.24.0",
     "marked": "^0.3.6",
@@ -28,6 +34,7 @@
     "react-scripts": "^0.7.0",
     "reactfire": "^1.0.0",
     "redux": "^3.6.0",
+    "redux-saga": "^0.15.6",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.0.0",
     "webpack-core": "^0.6.9"
