--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "dgram": "^1.0.1",
+    "dns": "^0.2.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
@@ -17,9 +19,11 @@
     "firebase": "^3.7.0",
     "google-map-react": "^0.24.0",
     "marked": "^0.3.6",
+    "module": "^1.2.5",
     "moment": "^2.17.1",
     "moment-range": "^3.0.3",
     "moment-timezone": "^0.5.11",
+    "nodemailer-sendmail-transport": "^1.0.2",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
@@ -36,6 +40,7 @@
     "redux": "^3.6.0",
     "redux-saga": "^0.15.6",
     "redux-thunk": "^2.2.0",
+    "tap": "^10.7.2",
     "webpack": "^3.0.0",
     "webpack-core": "^0.6.9"
   },
