--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^3.7.0",
     "google-map-react": "^0.24.0",
     "marked": "^0.3.6",
+    "material-ui": "^0.19.0",
     "module": "^1.2.5",
     "moment": "^2.17.1",
     "moment-range": "^3.0.3",
