--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "dateformat": "^4.1.0",
     "dgram": "^1.0.1",
     "dns": "^0.2.2",
     "eslint": "^3.19.0",
